@startuml
'https://plantuml.com/class-diagram

class CreateBusinessSectorUI{}


class CreateBusinessSectorController{
businessSectorList : BusinessSectorList
createBusinessSector(designation)
}


class BusinessSectorList{
businessSectorList : List<BusinessSector>
createBusinessSector(designation)
listDoesNotContainSector(newBusinessSector)
add(newBusinessSector)
}


class BusinessSector{
designation : String
}

BusinessSectorList "1" *-- "*" BusinessSector : has
CreateBusinessSectorController "1" o-- "1" BusinessSectorList
CreateBusinessSectorUI "1" o-- "1" CreateBusinessSectorController
@enduml